# DynaEngine

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/dynamic_curves/: curve_parameters.json  example_darendeli_2001.json  example_ishibashi_1993.json  example_menq_2003.json  example_rojas_2019.json  example_rollins_2020.json  example_seed_1970.json  example_userdefined.json  example_wang_2021.json
dev/: benchmark_calibration_gqh.py  benchmark_prove_calibration_gqh.py  benchmark_set_of_parameters.py  calibration_gqh_hh.py  class_input_gqh.py  cost_function.py  dev_calibration_gqh.py  dev_seismo_response.py  dev_seismo_scale.py  helper_calibration_gqh.py
dynaengine/: __init__.py  calibration.py  catalog.py  columns.py  constants.py  dxf.py  dynamic_curves.py  pipeline.py  plots.py
examples/: 01_dynamic_curves.py  02_calibration.py  03_discretize_column.py  04_dxf_to_columns.py  __init__.py  common.py  dxf_demo.py
examples/data/: section_01.dxf  (+1 more)
frontend/: app.js  index.html  style.css
notebooks/: 01_dynamic_curves.ipynb  02_calibration.ipynb  03_columns_from_dxf.ipynb  03_dxf_columns.ipynb  04_full_workflow.ipynb  calibration_gqh-hh.ipynb  class_curves.ipynb  class_frecuency_spectrum.ipynb  class_ground_motion.ipynb  class_hh_calibration.ipynb  comprob_gqh.ipynb  gqh_calibration.ipynb  test_nl_simulation.ipynb
scripts/: exec_calibration_gqh.py  exec_discretized_column.py  exec_make_input.py  exec_seismo_response.py
services/: service_calibration.py
tests/: test_dynamic_curves.py  test_plots.py  test_unidentified_materials.py
(+94 files in other folders)
